--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,21 @@
-google-generativeai
-python-dotenv
+# requirements.txt
+# ------- Google -------
+google-generativeai>=0.8.3
+google-cloud-texttospeech>=2.21.0
+google-cloud-storage>=2.18.0
+google-cloud-logging>=3.11.0
+
+# ------- ljud -------
+pydub>=0.25.1
+librosa>=0.10.2
+soundfile>=0.12.1
+
+# ------- video / bild -------
+opencv-python>=4.10.0
+pillow>=10.4.0
+imageio[ffmpeg]>=2.34.0
+
+# ------- utils -------
+python-dotenv>=1.0.0
+tqdm>=4.66.4
+click>=8.1.7
