--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,6 @@ imageio[ffmpeg]>=2.34.0
 python-dotenv>=1.0.0
 tqdm>=4.66.4
 click>=8.1.7
+# ------- Bliss-Booster -------
+# realesrgan-ncnn-vulkan (install separately)
+# demucs (install separately)
