--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,6 @@ click>=8.1.7
 # realesrgan-ncnn-vulkan (install separately)
 # demucs (install separately)
 websockets>=12.0
+# ------- Indexing & Vector DB -------
+qdrant-client>=1.9.1
+httpx>=0.27.0
